# ProjetPA

./: .clang-format  .gitignore  CMakeLists.txt  Constante.cpp  Constante.hpp  Infos.txt  Makefile  addition.h  fonctions_SDL.c  fonctions_SDL.h  main  main.c  main.cpp  map.txt  mapPath.txt  monFichier.txt  mon_programme  superbuild.cmake  test  test.cpp
.VSCodeCounter/2023-12-06_21-12-20/: details.md  diff-details.md  diff.md  diff.txt  results.json  results.md  results.txt
.VSCodeCounter/2023-12-06_21-12-57/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
CMakeModules/: FindSDL2_ttf.cmake
Maps/: Base.tsx  Map.tmx  Map2.tmx  Shadow.psd  Shadow.tsx  Test.tsx  Test2.tsx
Maps/Modele/: addElements.tx
Maps/tmx/: Player_default_Tilesheet.tsx  Spawn.tmx
Maps/tmx/deux/: 1.tmx  2.tmx  3.tmx
Maps/tmx/quatres/: 1.tmx  2.tmx  3.tmx
Maps/tmx/un/: 1.tmx
lib/Cartes/: cartes.cpp  cartes.hpp  tile.cpp  tile.hpp
lib/HUD/: hud.cpp  hud.hpp
lib/Variables/: variables.cpp  variables.hpp
lib/button/: button.cpp  button.hpp
lib/display/: display.cpp  display.hpp
lib/donjon/: donjon.cpp  donjon.hpp  tree.cpp  tree.hpp
lib/end/: end.cpp  end.hpp
lib/entity/: entity.cpp  entity.hpp
lib/gamemode/: gamemode.cpp  gamemode.hpp
lib/jeu/: jeu.cpp  jeu.hpp
lib/maps/: assets.cpp  assets.hpp  maps.cpp  maps.hpp
lib/menu/: menu.cpp  menu.hpp
lib/monster/: monster.cpp  monster.hpp
lib/pause/: pauses.cpp  pauses.hpp
lib/player/: player.cpp  player.hpp
lib/sprites/: sprite.cpp  sprite.hpp
lib/texte/: texte.cpp  texte.hpp
lib/utility/: utility.cpp  utility.hpp
lib/weapon/: armes.cpp  armes.hpp
lib/world/: world.cpp  world.hpp
